fix modal overlay spill over docs page

--- a/src/components/rux-modal/rux-modal.scss
+++ b/src/components/rux-modal/rux-modal.scss
@@ -26,6 +26,22 @@
     box-sizing: inherit;
 }
 
+//  this styling is only used in storybook up for presentational purposes
+//  default flex position takes up the entire body element en spills overlay
+//  on top of the docs page
+
+:host(.demo) {
+    display: block;
+    min-height: 500px;
+    .rux-modal__wrapper {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 :host([hidden]) {
     display: none;
 }
